# DeepSight-AI

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/models/: README.md  convert.py  notable_ai_models.csv  notable_ai_models.sql  notable_ai_models_insert.sql
db/: README.md  ai_insights.db  database_test.py  query_examples.py  setup_database.py  test_database.py
deploy/: README.md  quick-deploy.sh
prompts/: model_parameters_by_years.md  model_parameters_vs_datapoints.md
template/: instruct.md
template/components/: controls.html  legend.html  stats-grid.html
template/layouts/: chart-container.html  footer.html  header.html
template/styles/: base.css  components.css  responsive.css
